@@ -1,3 +1,6 @@
+04/04/13:
+	Added LCARS theme for Bluelog Live. Problem?
+
 04/03/13:
 	Fix Makefile after removing doc files
 
